# test-fastapi

./: .env.example  docker-compose.yml  hello.py  main.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 6b9009b09188_add_order_table.py  e8f80b152afd_add_user_model.py  eb84826d5110_add_user_table.py
core/api/order/: router.py
core/api/user/: router.py
core/domain/order/: repository.py  schemas.py
core/domain/user/: crud.py  repository.py  schemas.py
database/: crud.py  engine.py  exceptions.py  models.py  schemas.py  user.py
database/models/: __init__.py  order.py
